# gol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: keybinds.txt
assets/shaders/: cells.wgsl
src/: board.rs  config.rs  game.rs  main.rs  prelude.rs  savestates.rs  timing.rs  utils.rs
src/config/: color.rs  load.rs  mod.rs
src/game/: board.rs  mod.rs  rulestring.rs
src/game_logic/: cache.rs  keybinds.rs  mod.rs  model.rs  mouse.rs  other_events.rs  selection.rs  update.rs  utils.rs  view.rs
src/ui/: info.rs  mod.rs  notifications.rs  windows.rs
