[package]
name = "gol"
version = "0.1.1"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
bon = "2.0.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
fps_ticker = "1.0.0"
grid = "0.14.0"
lazy_static = "1.5.0"
nalgebra = "0.33.0"
nannou = "0.19.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.209"
toml = "0.8.19"

[profile.dev]
opt-level = 3
